# air-quality-health-analysis

./: .gitignore  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  tests.yml
docs/: etl-pipeline.md
src/common/: feature_types.yaml
src/common/utils/: dataframe_utils.py  file_utils.py
src/etl_pipeline/: Dockerfile.etl  README.md  __init__.py  etl_step.py  main_orchestrator.py
src/etl_pipeline/config/: config_manager.py  logger.py  pipeline_config.yaml
src/etl_pipeline/data/health_data/processed/: health.csv
src/etl_pipeline/data/health_data/raw/: enfermedades_respiratorias.csv
src/etl_pipeline/data/output/: dataset.csv.dvc
src/etl_pipeline/data/output/reports/: data_quality_report.json
src/etl_pipeline/data/socioeconomic_data/processed/: province_gdp.csv  province_population_size.csv
src/etl_pipeline/data/socioeconomic_data/raw/: poblacion_provincias_21.csv
src/etl_pipeline/extract/: __init__.py  data_extraction_step.py
src/etl_pipeline/extract/data_extractors/: __init__.py  air_quality_data_extractor.py  base_extractor.py  health_data_extractor.py  socioeconomic_data_extractor.py
src/etl_pipeline/load/: __init__.py  data_export_step.py  data_quality_report_step.py
src/etl_pipeline/load/data_reporters/: __init__.py  air_quality_data_reporter.py
src/etl_pipeline/tests/: conftest.py  test_main_orchestrator.py
src/etl_pipeline/tests/extract_tests/: test_data_extraction_step.py
src/etl_pipeline/tests/load_tests/: test_data_export_step.py  test_data_quality_report_step.py
src/etl_pipeline/tests/transform_tests/: test_data_cleaning_step.py  test_data_merging_step.py  test_data_transformation_step.py
src/etl_pipeline/tests/utils_tests/: test_check_project_structure.py  test_province_mapper.py
src/etl_pipeline/transform/: __init__.py  data_cleaning_step.py  data_merging_step.py  data_transformation_step.py  data_validation_step.py  feature_engineering_step.py
src/etl_pipeline/transform/data_transformers/: __init__.py  air_quality_data_transformer.py  base_transformer.py  health_data_transformer.py  socioeconomic_data_transformer.py
src/etl_pipeline/utils/: __init__.py  air_quality_rules.py  check_project_structure.py  province_mapper.py  unified_province_name.json
